--- a/src/main/resources/templates/attendance-detail.html
+++ b/src/main/resources/templates/attendance-detail.html
@@ -69,27 +69,21 @@
                 </a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="files.html">
+                <a class="nav-link" href="attendance.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>考勤</span>
+                    <span>签到</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="homework.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>作业</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="files.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>投票</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="files.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>问卷调查</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="files.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>文件管理</span>
+                    <span>文件</span>
                 </a>
             </li>
 
@@ -206,21 +200,21 @@
                                     <thead>
                                     <tr>
                                         <th>学生姓名</th>
-                                        <th>提交状态</th>
-                                        <th>提交时间</th>
+                                        <th>签到状态</th>
+                                        <th>签到时间</th>
                                     </tr>
                                     </thead>
                                     <tfoot>
                                     <tr>
                                         <th>学生姓名</th>
-                                        <th>提交状态</th>
-                                        <th>提交时间</th>
+                                        <th>签到状态</th>
+                                        <th>签到时间</th>
                                     </tr>
                                     </tfoot>
                                     <tbody>
                                     <tr th:each="student : ${studentList}">
                                         <td th:text="${student.username}"></td>
-                                        <td th:text="${student.submitted}"></td>
+                                        <td th:text="${student.attended}"></td>
                                         <td th:text="${student.time}"></td>
                                     </tr>
                                     </tbody>
