--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -39,17 +39,25 @@
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-2">忘记密码了?</h1>
-                                        <p class="mb-4">我们明白有些意外在所难免，只要在下面输入您的电子邮件地址，我们就会向您发送一个链接以重置密码！</p>
+                                        <p class="mb-4">我们明白有些意外在所难免，只要在下面输入您的用户名，我们就会向您发送一个验证码以重置密码！</p>
                                     </div>
-                                    <form class="user">
+                                    <p th:if="${not #strings.isEmpty(message)}" th:text="${message}"></p>
+                                    <form class="user" action="resetPassword">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="邮箱">
+                                            <input th:value="${lastUsername}" name="username" class="form-control form-control-user mb-2" placeholder="用户名">
                                         </div>
-                                        <a href="login.html" class="btn btn-primary btn-user btn-block">
-                                            重置密码
-                                        </a>
+                                        <div class="form-group row">
+                                            <div class="col-sm">
+                                                <input name="code" class="form-control form-control-user" placeholder="验证码">
+                                            </div>
+                                            <div class="col-sm">
+                                                <button name="action" value="send" type="submit" class="btn btn-primary btn-user btn-block">发送验证码</button>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <input name="newPassword" class="form-control form-control-user" placeholder="新密码">
+                                        </div>
+                                        <button name="action" value="reset" type="submit" class="btn btn-primary btn-user btn-block">重置密码</button>
                                     </form>
                                     <hr>
                                     <div class="text-center">
