--- a/src/main/resources/templates/course.html
+++ b/src/main/resources/templates/course.html
@@ -48,7 +48,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>概览</span></a>
+                    <span>主页</span></a>
             </li>
 
             <!-- Divider -->
@@ -57,19 +57,34 @@
             <div class="sidebar-heading" th:text="${currentCourse}"></div>
 
             <li class="nav-item active">
-                <a class="nav-link" href="files.html">
+                <a class="nav-link" href="course.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>课程主页</span></a>
+                    <span>课程主页</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="bulletin.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>公告</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="attendance.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>签到</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="homework.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>作业</span>
+                </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="files.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>课堂考勤</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="files.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>文件管理</span></a>
+                    <span>文件</span>
+                </a>
             </li>
 
             <!-- Divider -->
@@ -109,8 +124,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small"
-                                    th:text="${currentUser}"></span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600" th:text="${currentUser}"></span>
                                 <img class="img-profile rounded-circle" th:src="@{images/undraw_profile.svg}">
                             </a>
                             <!-- Dropdown - User Information -->
