--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -50,11 +50,40 @@
                     <span>主页</span></a>
             </li>
 
-            <!-- Nav Item - Tables -->
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
+
+            <div class="sidebar-heading" th:text="${currentCourse}"></div>
+
+            <li class="nav-item">
+                <a class="nav-link" href="course.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>课程主页</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="bulletin.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>公告</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="attendance.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>签到</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="homework.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>作业</span>
+                </a>
+            </li>
             <li class="nav-item active">
                 <a class="nav-link" href="files.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>文件管理</span></a>
+                    <span>文件</span>
+                </a>
             </li>
 
             <!-- Divider -->
@@ -94,7 +123,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="${username}"></span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600" th:text="${currentUser}"></span>
                                 <img class="img-profile rounded-circle"
                                     th:src="@{images/undraw_profile.svg}">
                             </a>
@@ -175,7 +204,7 @@
                                     </tfoot>
                                     <tbody>
                                         <tr th:each="file : ${files}">
-                                            <td><a th:href="${file.url}" th:text="${file.file_name}" /></td>
+                                            <td><a th:href="${file.url}" th:text="${file.file_name}"/></td>
                                             <td th:text="${file.size}"></td>
                                             <td th:text="${file.creator}"></td>
                                             <td th:text="${file.date_created}"></td>
@@ -183,7 +212,7 @@
                                                 <form action="fileDelete">
                                                     <input hidden name="fileId" th:value="${file.id}">
                                                     <input hidden name="fileName" th:value="${file.file_name}">
-                                                    <button type="submit" class="btn btn-sm btn-danger">删除</button>
+                                                    <button th:if="${memberType} eq 'admin' or ${currentUser} eq ${file.creator}" type="submit" class="btn btn-sm btn-danger">删除</button>
                                                 </form>
                                             </td>
                                         </tr>
