--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,12 +80,6 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="vote.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>投票</span>
-                </a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="files.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>文件</span>
@@ -232,9 +226,10 @@
                             <h6 class="m-0 font-weight-bold text-primary">创建 / 加入课程</h6>
                         </div>
                         <div class="card-body">
-                            <form th:action="@{courseAction}">
+                            <form action="courseAction">
                                 <input name="courseName" type="text" class="bg-light border-primary mr-2" placeholder="课程名称">
-                                <button th:if="${currentUserType} eq 'admin' or ${currentUserType} eq 'teacher'" type="submit" name="action" value="create" class="btn btn-primary mr-2">创建</button>
+                                <button th:if="${currentUserType} eq 'admin' or ${currentUserType} eq 'teacher'"
+                                        type="submit" name="action" value="create" class="btn btn-primary mr-2">创建</button>
                                 <button type="submit" name="action" value="join" class="btn btn-success">加入</button>
                             </form>
                         </div>
@@ -329,7 +324,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" th:href="@{userLogout}">Logout</a>
+                    <a class="btn btn-primary" href="userLogout">Logout</a>
                 </div>
             </div>
         </div>
