--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,8 +38,8 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">SCU Course</h1>
                                     </div>
-                                    <p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
-                                    <form class="user" th:action="@{userLogin}">
+                                    <p th:if="${not #strings.isEmpty(message)}" th:text="${message}"></p>
+                                    <form class="user" action="userLogin">
                                         <div class="form-group">
                                             <input name="username" type="text" class="form-control form-control-user"
                                                 id="InputUsername" placeholder="用户名">
@@ -56,16 +56,14 @@
                                                 <label class="custom-control-label" for="customCheck">记住密码</label>
                                             </div>
                                         </div>
-                                        <button type="submit" class="btn btn-primary btn-user btn-block">
-                                            登录
-                                        </button>
+                                        <button type="submit" class="btn btn-primary btn-user btn-block">登录</button>
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" th:href="@{forgot-password}">忘记密码</a>
+                                        <a class="small" href="forgot-password">忘记密码</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" th:href="@{register}">注册账号</a>
+                                        <a class="small" href="register">注册账号</a>
                                     </div>
                                 </div>
                             </div>
